<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_gap">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_exit"
        android:layout_marginTop="@dimen/layout_top_margin"
        android:id="@+id/containerImage">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/profile_default"
            android:padding="4dp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/text_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/change_profile_image"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/containerImage"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="33dp"
        android:layout_marginStart="76dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:layout_below="@+id/text_change"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button"
        android:layout_marginEnd="79dp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:layout_below="@+id/text_change"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:background="@android:drawable/ic_menu_close_clear_cancel" />
</RelativeLayout>