<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.create.sidhu.movbox.activities.ForgotPassword"
    android:id="@+id/containerMaster"
    android:orientation="vertical">
    <!-- Logo -->
    <LinearLayout
        android:id="@+id/containerLogoArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/login_background"
        android:gravity="center_horizontal|center_vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/main_logo"
            android:contentDescription="@string/logo"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/main_logo_text"
            android:contentDescription="@string/logo_text"/>
    </LinearLayout>
    <!-- Main Component -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:id="@+id/containerMainComponent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:padding="@dimen/standard_gap">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_password_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_large"
            android:layout_marginTop="@dimen/standard_gap"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/standard_gap_large"
            android:id="@+id/containerEditText">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/containerEditTextUser"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/login_side_margin"
                android:layout_marginRight="@dimen/login_side_margin"
                android:background="@drawable/custom_textview"
                android:paddingTop="@dimen/standard_gap"
                android:paddingBottom="@dimen/standard_gap"
                android:paddingStart="@dimen/standard_gap_large">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_Username"
                    android:hint="@string/username"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="@dimen/standard_touch_space"
                    android:layout_marginEnd="@dimen/standard_touch_space"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/colorTextPrimary"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/containerButtons"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/standard_gap">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonRecover"
                android:text="@string/recover_button"
                android:textAllCaps="false"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_large"
                android:layout_marginTop="@dimen/standard_gap"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/standard_gap"
                android:background="@drawable/custom_button_borderless_yellow"
                android:layout_weight="1"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCancel"
                android:text="@string/ratings_cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_large"
                android:layout_marginTop="@dimen/standard_gap"
                android:layout_marginStart="@dimen/standard_gap"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:background="@drawable/custom_button_borderless_yellow"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
    <!-- OTP -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:id="@+id/containerOtp"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:padding="@dimen/standard_gap"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/text_small"
            android:text="@string/recover_otp_send"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/standard_gap"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/recover_enter_otp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/containerEditTextOtp"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/standard_gap_large">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_Otp1"
                android:layout_marginBottom="@dimen/standard_gap"
                android:layout_marginEnd="@dimen/standard_touch_space"
                android:layout_marginStart="@dimen/standard_touch_space"
                android:textColor="@color/colorTextPrimary"
                android:textSize="25sp"
                android:inputType="number"
                android:maxLength="1"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_Otp2"
                android:layout_marginBottom="@dimen/standard_gap"
                android:layout_marginEnd="@dimen/standard_touch_space"
                android:layout_marginStart="@dimen/standard_touch_space"
                android:textColor="@color/colorTextPrimary"
                android:textSize="25sp"
                android:inputType="number"
                android:maxLength="1"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_Otp3"
                android:layout_marginBottom="@dimen/standard_gap"
                android:layout_marginEnd="@dimen/standard_touch_space"
                android:layout_marginStart="@dimen/standard_touch_space"
                android:textColor="@color/colorTextPrimary"
                android:textSize="25sp"
                android:inputType="number"
                android:maxLength="1"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_Otp4"
                android:layout_marginBottom="@dimen/standard_gap"
                android:layout_marginEnd="@dimen/standard_touch_space"
                android:layout_marginStart="@dimen/standard_touch_space"
                android:textColor="@color/colorTextPrimary"
                android:textSize="25sp"
                android:inputType="number"
                android:maxLength="1"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_Otp5"
                android:layout_marginBottom="@dimen/standard_gap"
                android:layout_marginEnd="@dimen/standard_touch_space"
                android:layout_marginStart="@dimen/standard_touch_space"
                android:textColor="@color/colorTextPrimary"
                android:textSize="25sp"
                android:inputType="number"
                android:maxLength="1"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_Otp6"
                android:layout_marginBottom="@dimen/standard_gap"
                android:layout_marginEnd="@dimen/standard_touch_space"
                android:layout_marginStart="@dimen/standard_touch_space"
                android:textColor="@color/colorTextPrimary"
                android:textSize="25sp"
                android:inputType="number"
                android:maxLength="1"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSubmitOtp"
            android:text="@string/recover_button_otp"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/login_text_size"
            android:layout_marginTop="@dimen/standard_gap_large"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="110dp"
            android:background="@drawable/custom_button_borderless_yellow" />
    </LinearLayout>
    <!-- Confirm Password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:id="@+id/containerConfirmPassword"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:padding="@dimen/standard_gap"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/old_password"
            android:layout_marginBottom="@dimen/standard_gap_large"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/containerOriginalPassword">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/containerEditTextOriginalPassword"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/login_side_margin"
                android:layout_marginRight="@dimen/login_side_margin"
                android:background="@drawable/custom_textview"
                android:paddingTop="@dimen/standard_gap"
                android:paddingBottom="@dimen/standard_gap"
                android:paddingStart="@dimen/standard_gap_large">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_OriginalPassword"
                    android:hint="@string/password"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="@dimen/standard_touch_space"
                    android:layout_marginEnd="@dimen/standard_touch_space"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_small"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSubmitOriginalPassword"
            android:text="@string/recover_confirm_button"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_large"
            android:layout_marginTop="@dimen/standard_gap_large"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="110dp"
            android:background="@drawable/custom_button_borderless_yellow" />
    </LinearLayout>
    <!-- Password Reset-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:id="@+id/containerPassword"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:padding="@dimen/standard_gap"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/new_password" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/standard_gap_large"
            android:id="@+id/containerRecoverPassword">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/containerEditTextPassword"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/login_side_margin"
                android:layout_marginRight="@dimen/login_side_margin"
                android:layout_marginBottom="@dimen/standard_gap"
                android:background="@drawable/custom_textview"
                android:paddingTop="@dimen/standard_gap"
                android:paddingBottom="@dimen/standard_gap"
                android:paddingStart="@dimen/standard_gap_large">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_Password"
                    android:hint="@string/password"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="@dimen/standard_touch_space"
                    android:layout_marginEnd="@dimen/standard_touch_space"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusForward="@+id/editText_ConfirmPassword"
                    android:textSize="@dimen/text_small"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/containerEditTextConfirmPassword"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/login_side_margin"
                android:layout_marginRight="@dimen/login_side_margin"
                android:layout_marginTop="@dimen/standard_gap"
                android:background="@drawable/custom_textview"
                android:paddingTop="@dimen/standard_gap"
                android:paddingBottom="@dimen/standard_gap"
                android:paddingStart="@dimen/standard_gap_large">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_ConfirmPassword"
                    android:hint="@string/password_confirm"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="@dimen/standard_touch_space"
                    android:layout_marginEnd="@dimen/standard_touch_space"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_small"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSubmitPassword"
            android:text="@string/recover_save_button"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_large"
            android:layout_marginTop="@dimen/standard_gap_large"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="110dp"
            android:background="@drawable/custom_button_borderless_yellow" />
    </LinearLayout>
</LinearLayout>
